# musicxml2midi

./: README.md  pyproject.toml
examples/: mar.musicxml  mini.musicxml
examples/mar/: mar_02_Flute 1.mid  mar_03_Flute 2.mid  mar_04_Oboe 1.mid  mar_05_Oboe 2.mid  mar_06_English Horn.mid  mar_07_Clarinet _B Flat_ 1.mid  mar_08_Clarinet _B Flat_ 2.mid  mar_10_Bassoon 1.mid  mar_11_Bassoon 2.mid  mar_13_Horn _F_ 1.mid  mar_14_Horn _F_ 2.mid  mar_15_Horn _F_ 3.mid  mar_16_Horn _F_ 4.mid  mar_18_Horn _F_ 6.mid  mar_19_Trumpet _B Flat_ 1.mid  mar_22_Trombone 1.mid  mar_23_Trombone 2.mid  mar_24_Bass Trombone.mid  mar_25_Tuba.mid  mar_27_Harp.mid  mar_28_Celesta.mid  mar_29_Violin I.mid  mar_30_Violin II.mid  mar_31_Viola.mid  mar_32_Violoncello.mid  mar_33_Double Bass.mid  mar_conductor.mid
src/musicxml2midi/: __init__.py  analyze.py  cli.py  config.py  config_manager.py  interpretation.py  process.py  timeline.py  write.py
src/musicxml2midi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/musicxml2midi/gui/: app.py  app.py.bak  config.default.json  config.user.json  midi_gui.py  models.py  pianoroll.py  pianoroll_post.py  settings.py  utils.py
src/musicxml2midi/humanize/: velocity.py
src/musicxml2midi/util/: time.py  xml.py
