[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicxml2midi"
version = "0.0.1"
description = "MusicXML -> MIDI converter (clean, modular blueprint)"
authors = [{name = "You"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mido>=1.3.0",
  "streamlit>=1.36.0",
  "matplotlib>=3.8.0",
  "pandas>=2.0.0"
]

[project.scripts]
musicxml2midi = "musicxml2midi.cli:main"

